Fix truncated "Publish" button in Compose modal, fixes #64

--- a/app/javascript/styles/gabsocial/components/modal.scss
+++ b/app/javascript/styles/gabsocial/components/modal.scss
@@ -34,6 +34,8 @@
 	pointer-events: auto;
 	display: flex;
 	z-index: 9999;
+	max-height: 100%;
+	overflow-y: hidden;
 }
 
 .video-modal {
